UI: quote doesn't overlap card url on resize (issue #153)

--- a/media/story.less
+++ b/media/story.less
@@ -276,6 +276,10 @@
               -webkit-line-clamp: 2;
               -webkit-box-orient: vertical;
               overflow: hidden;
+
+              &.ct-one_liner{
+                -webkit-line-clamp: 1;
+              }
             }
 
             > .ct-card_url {
